fixed overflow added ribbonSettingsDropdown a as reusable component general fixes

--- a/src/Components/NavBar/Ribbon/Ribbon.css
+++ b/src/Components/NavBar/Ribbon/Ribbon.css
@@ -56,27 +56,17 @@
   top: 32px;
   right: 0;
   width: 150px;
-  z-index: 5000;
+  z-index: 10000;
   padding: 0;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
   background-color: white;
-}
-
-#ribbonSettingsDropdown li:hover {
-  background-color: #e6f2fb;
+  & li:hover {
+    background-color: #e6f2fb;
+  }
 }
 
 .ribbonSelected {
   background-color: white;
   border: 1px solid #e0e0e0;
   border-bottom: none;
-}
-
-#ribbonModalOff {
-  position: absolute;
-  width: 125vw;
-  height: 125vh;
-  z-index: 100;
-  right: -50px;
-  top: -10px;
 }
