--- a/src/Components/NavBar/Ribbon/ribbonDropdown.css
+++ b/src/Components/NavBar/Ribbon/ribbonDropdown.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding-inline: 2rem;
   justify-content: space-between;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 .lowerNavBar div {
@@ -20,11 +21,11 @@
   font-size: 1.25rem;
   font-weight: 400;
   color: var(--primary-color);
-}
 
-.lowerNavBar h1:hover {
-  text-decoration: underline;
-  cursor: pointer;
+  &:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
 
 .lowerNavBar ul {
@@ -34,18 +35,59 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+
+  & li {
+    cursor: pointer;
+
+    & img {
+      width: 1.25rem;
+    }
+
+    &:nth-child(3) {
+      transform: scale(130%);
+      margin-left: 5px;
+    }
+
+    &:nth-child(4) {
+      position: relative;
+      font-size: 0.8rem;
+      & span {
+        margin-left: 1rem;
+        color: var(--primary-color);
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        height: 4rem;
+        border-right: 1px solid hsla(0, 0%, 88%, 0);
+        padding-right: 10px;
+      }
+      &:hover {
+        border-right: 1px solid #e0e0e0;
+      }
+    }
+  }
 }
 
-.lowerNavBar ul li img {
-  width: 1.25rem;
-}
+#lowerNavBarDropdown {
+  position: absolute;
+  display: grid;
+  top: 3.5rem;
+  right: 0;
+  width: 100%;
+  height: auto;
+  text-align: left;
+  z-index: 10000;
+  padding: 0;
+  gap: 0;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
+  border-right: 1px solid #e0e0e0;
+  background-color: white;
 
-.lowerNavBar ul li:nth-child(3) {
-  transform: scale(130%);
-  margin-left: 5px;
-}
+  & li {
+    padding: 0.75rem 1rem;
+  }
 
-.lowerNavBar ul li:nth-child(4) {
-  margin-left: 2rem;
-  color: var(--primary-color);
+  & li:hover {
+    background-color: #e6f2fb;
+  }
 }
